name:                libp2p-peer
version:             0.1.0
-- synopsis:
-- description:
homepage:            https://github.com/MatrixAI/haskell-libp2p-peer#readme
license:             Apache-2.0
license-file:        LICENSE
author:              CMCDragonkai
maintainer:          roger.qiu@matrix.ai
copyright:           Copyright: (c) 2017 Roger Qiu
category:            Network
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Network.Data.PeerId,
                       Network.Data.Peer
  build-depends:       base >= 4.7 && < 4.10
                     , bytestring
                     , base58-bytestring
                     , text
                     , multihash
                     --, libp2p-crypto
  default-language:    Haskell2010

test-suite libp2p-peer-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , libp2p-peer
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/MatrixAI/haskell-libp2p-peer
