name:                libp2p-peer
version:             0.1.0
-- synopsis:
-- description:
homepage:            https://github.com/MatrixAI/haskell-libp2p-peer#readme
license:             Apache-2.0
license-file:        LICENSE
author:              CMCDragonkai
maintainer:          roger.qiu@matrix.ai
copyright:           Copyright: (c) 2017 Roger Qiu
category:            Network
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Network.LibP2P.PeerId
  build-depends:       base >= 4.7 && < 4.10
                     , base58-bytestring
                     , bytestring
                     , cryptonite
                     , libp2p-crypto
                     , multihash
                     , stm
                     , stm-containers
                     , text
  default-language:    Haskell2010

test-suite libp2p-peer-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , aeson
                     , bytestring
                     , cryptonite
                     , libp2p-peer
                     , libp2p-crypto
                     , memory
                     , multihash
                     , QuickCheck
                     , tasty
                     , tasty-hunit
                     , tasty-quickcheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/MatrixAI/haskell-libp2p-peer
